bugfix: disabled overflow for component cars to correct animation look and feel

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -15,6 +15,7 @@ div.component-card {
   width: 3rem;
   padding: 0.25rem;
   flex: 0 0 3rem;
+  overflow: hidden;
 }
 
 div.component-card[active] {
